--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ phpmyadmin
 .env
 .vscode
 html/mycakeapp/config/Migrations/schema-dump-default.lock
+html/mycakeapp/webroot/img/auction/*
+!html/mycakeapp/webroot/img/auction/.gitkeep
