--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,5 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
+          echo 日本語のコメントのテストです！！
           echo test, and deploy your project.
