--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,9 +34,16 @@ jobs:
           echo test, and deploy your project.
           pwd # /home/runner/work/quelcode-cakephp/quelcode-cakephp
           ls # README.md docker docker-compose.yml html
+          id -u # 1000
 
       - name: docker-compose up -d
         run: docker-compose up -d
 
       - name: phpコンテナの中身を表示してみる
         run: docker-compose exec -T php bash -c 'pwd; ls; cd mycakeapp; pwd; ls;'
+
+      - name: composer --version
+        run: docker-compose exec -T php bash -c 'composer --version'
+
+      - name: composer install
+        run: docker-compose exec -T php bash -c 'cd mycakeapp; yes | composer install'
