--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -3,3 +3,8 @@ date.timezone = "Asia/Tokyo"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
+[extension]
+extension=memcached.so
+[session]
+session.save_handler = memcached
+session.save_path = memcached:11211
