--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,7 @@ services:
       - 10381:80
     volumes:
       - ./phpmyadmin/sessions:/sessions
+  memcached:
+    image: memcached
+    ports:
+      - 11211:11211
